Fix userTitle width on mobile

--- a/ui/scss/component/_livestream-comment.scss
+++ b/ui/scss/component/_livestream-comment.scss
@@ -32,6 +32,10 @@
     &:hover {
       color: var(--color-primary) !important;
     }
+
+    @media (max-width: $breakpoint-small) {
+      max-width: unset;
+    }
   }
 
   .channel-name {
